# anyviking-research

./: .env.example  .gitignore  AGENT_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_CONTEXT.md  README-ZH.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
config/: ov.conf.example  ovcli.conf.example
docs/: architecture.md  cli_reference.md  configuration.md  demo_run_records.md  development.md  env_setup.md  faq.md  install_from_scratch.md  news_demo_run_record.md  next_steps.md  open_source_checklist.md  open_source_readiness.md  project_basics.md  project_report.md  project_review_and_plan.md  publishing.md  research_workflow.md  synthetic_demo_run_record.md  troubleshooting.md
examples/news_us_china/: README.md  queries.md  research_questions.yaml  run_demo.ps1  run_research.ps1
examples/smoke_corpus/: README.md  openviking-overview.md  project-scope.md  research_questions.yaml  search-workflow.md
examples/synthetic_ai_news/: README.md  queries.md  research_questions.yaml  run_demo.ps1  run_research.ps1
examples/synthetic_ai_news/source/: 2026-05-01-ai-search-market-overview.md  2026-05-03-edge-llm-device.md  2026-05-05-agent-browser-workflow.md  2026-05-07-enterprise-knowledge-base.md  2026-05-09-open-source-retrieval-tools.md  2026-05-11-ai-search-evaluation.md  2026-05-13-data-governance-privacy.md  2026-05-15-product-roadmap-summary.md
scripts/: import_news_demo.ps1  smoke_test.ps1  start_openviking.ps1  start_openviking.sh  stop_openviking.ps1  stop_openviking.sh
skills/anyviking-research/: SKILL.md
skills/anyviking-research/agents/: openai.yaml
skills/anyviking-research/references/: commands.md  troubleshooting.md  workflow.md
src/anyviking_research/: __init__.py  cli.py
src/anyviking_research/connectors/: __init__.py  anysearch.py  base.py
src/anyviking_research/retrievers/: __init__.py  openviking.py
src/anyviking_research/workflows/: __init__.py  fetch_web.py  research.py
src/ov_search_skill/: __init__.py  cli.py
src/ov_search_skill/retrievers/: __init__.py  base.py  openviking.py
src/ov_search_skill/workflows/: __init__.py  research.py
tests/: test_anysearch_connector.py  test_cli_helpers.py  test_fetch_web_workflow.py  test_openviking_retriever.py  test_research_workflow.py  test_web_cli.py
