[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anyviking-research"
version = "0.6.0"
description = "CLI-first research toolkit that connects AnySearch discovery with OpenViking indexing and retrieval."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "AnyViking Research contributors" },
]
keywords = [
    "anysearch",
    "openviking",
    "retrieval",
    "research",
    "rag",
    "semantic-search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "PyYAML>=6",
]

[project.urls]
Homepage = "https://github.com/liuchenyang111111/anyviking-research"
Repository = "https://github.com/liuchenyang111111/anyviking-research"
Issues = "https://github.com/liuchenyang111111/anyviking-research/issues"

[project.optional-dependencies]
openviking = [
    "openviking>=0.3.17",
]
dev = [
    "build>=1.2",
    "twine>=5",
]

[project.scripts]
anyviking = "anyviking_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anyviking_research = ["py.typed"]
